preparing for user to provide organism as argument

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ package-dir = {"" = "src"}
 where = ["src"]
 
 [tool.setuptools.package-data]
-AMRrules = ["rules/*"]
+amrrules = ["rules/*"]
 
 [project.scripts]
 amrrules = "amrrules.cli:main"
