added ability to download latest CARD data for matching drugs and classes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ authors = [
 ]
 requires-python = ">=3.12"
 
+dependencies = [
+    "obonet>=1.1.1",
+]
+
 [tool.setuptools]
 package-dir = {"" = "src"}
 
