--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,15 +10,15 @@ build:
   tools:
     python: "3.12"
 
-# Build documentation in the "docs/" directory with AMRrules
-amrrules:
-   configuration: docs/conf.py
+# Build documentation in the "docs/" directory with Sphinx
+sphinx:
+   configuration: docs/source/conf.py
 
 # Optionally, but recommended,
 # declare the Python requirements required to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
+ python:
+    install:
+    - requirements: docs/requirements.txt
         
 
